kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  selector:
    app: backend
  ports:
    - port: 8080
