kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  selector:
    app: frontend
  ports:
    - port: 80
