kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
