kubernetes/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculatrice-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: calculatrice-hubert.polytech-dijon.kiowy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              number: 3000
      - path: /polycalculator
        pathType: Prefix
        backend:
          service:
            name: svc-backend
            port:
              number: 8080
